# control-panel

./: .gitignore  CMakeLists.txt  INSTALL.md  PKGBUILD  README.md  aero_panel_cpp.desktop  install.sh
resources/: aero.qss  aurorae.qss  dark.qss  neumorphic.qss  resources.qrc  retro.qss
src/: MainWindow.cpp  MainWindow.h  main.cpp
src/pages/: HomePage.cpp  HomePage.h  ProgramsPage.cpp  ProgramsPage.h  SettingsPage.cpp  SettingsPage.h  StartupPage.cpp  StartupPage.h  SystemPage.cpp  SystemPage.h  UserPage.cpp  UserPage.h
src/widgets/: PerformanceGraph.cpp  PerformanceGraph.h
